Adjust some reference capitalization

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -82,7 +82,7 @@ edition = {1},
 
 @article{randomgrid,
   author  = {James Bergstra and Yoshua Bengio},
-  title   = {Random Search for Hyper-Parameter Optimization},
+  title   = {Random search for hyper-parameter optimization},
   journal = {Journal of Machine Learning Research},
   year    = {2012},
   volume  = {13},
@@ -442,7 +442,7 @@ doi = {10.1016/j.ejor.2020.08.045}
 author = {Gerkmann, Timo and Vincent, Emmanuel},
 year = {2018},
 pages = {65--85},
-title = {Spectral Masking and Filtering},
+title = {Spectral masking and filtering},
 booktitle = {Audio Source Separation and Speech Enhancement},
 publisher = {Wiley},
 chapter = {5},
@@ -1553,7 +1553,7 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
     %eprint = {https://direct.mit.edu/neco/article-pdf/31/7/1235/1053200/neco\_a\_01199.pdf},
 }
 @inproceedings{kong2021decoupling,
-      title={Decoupling Magnitude and Phase Estimation with Deep ResUNet for Music Source Separation}, 
+      title={Decoupling magnitude and phase estimation with deep ResUNet for music source paration}, 
       author={Qiuqiang Kong and Yin Cao and Haohe Liu and Keunwoo Choi and Yuxuan Wang},
       year={2021},
       booktitle={Proceedings of the 22nd International Society for Music Information Retrieval Conference},
