--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -52,7 +52,7 @@ They are split across the following projects:
 		\url{https://github.com/sevagh/xumx-sliCQ}
 	\item
 		LaTeX files and scripts for generating this thesis, including all plots and demixing results in Chapter \ref{ch:experiment}:\\
-		\url{https://gitlab.com/sevagh/xumx_slicq_extra}
+		\url{https://github.com/sevagh/xumx_slicq_extra}
 	\item
 		Submissions made to the ISMIR 2021 Music Demixing Challenge (see Appendix \ref{appendix:crazyexperiments}):\\
 		\url{https://gitlab.aicrowd.com/sevagh/music-demixing-challenge-starter-kit}
@@ -63,13 +63,13 @@ All Python environments were designed to be reproducible with pip requirements.t
 \begin{tight_itemize}
 	\item
 		Pip file for oracles, trained model evaluations, boxplot creation, and performance benchmarks:\\
-		\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/requirements-cupy.txt}
+		\url{https://github.com/sevagh/xumx_slicq_extra/blob/main/mss_evaluation/mss-oracle-experiments/requirements-cupy.txt}
 	\item
 		Conda environment file for the NSGT/sliCQT PyTorch implementation:\\
 		\url{https://github.com/sevagh/nsgt/blob/main/conda-env.yml}
 	\item
 		Conda environment file for the xumx-sliCQ neural network:\\
-		\href{https://github.com/sevagh/xumx-sliCQ/blob/main/scripts/environment-gpu-linux-cuda11.yml}{https://github.com/sevagh/xumx-sliCQ/blob/main/scripts/environment-gpu-linux-cuda11.yml}
+		\url{https://github.com/sevagh/xumx-sliCQ/blob/main/scripts/environment-gpu-linux-cuda11.yml}
 \end{tight_itemize}
 
 I take code availability and reproducibility seriously. Feel free to e-mail me\footnote{\href{mailto:sevag.hanssian@mail.mcgill.ca}{sevag.hanssian@mail.mcgill.ca}, \href{mailto:sevagh+thesis@pm.me}{sevagh+thesis@pm.me}} if you encounter any errors, discrepancies, or difficulties with reproducing any of the results.
@@ -213,7 +213,7 @@ The participants were encouraged to either modify the baselines (like Open-Unmix
 
 The collaborative environment of the challenge was very fun, and I made 32 total submissions\footnote{\url{https://gitlab.aicrowd.com/sevagh/music-demixing-challenge-starter-kit}} to the challenge, resulting in a final place of 34 on the leaderboard. In my submission process, I tested different neural architectures and parameters with both the CDAE and Bi-LSTM variants until one of them achieved good results.
 
-My work in the challenge resulted in the creation of xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} the final model of this thesis. I wrote an article on xumx-sliCQ,\footnote{\url{https://mdx-workshop.github.io/proceedings/hanssian.pdf}, \url{https://arxiv.org/abs/2112.05509}} and I participated in the virtual ISMIR 2021 conference, where I showed xumx-sliCQ at the poster session\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/drafts-and-blobs/mdx21-poster.pdf}} of the MDX 21 challenge.
+My work in the challenge resulted in the creation of xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} the final model of this thesis. I wrote an article on xumx-sliCQ,\footnote{\url{https://mdx-workshop.github.io/proceedings/hanssian.pdf}, \url{https://arxiv.org/abs/2112.05509}} and I participated in the virtual ISMIR 2021 conference, where I showed xumx-sliCQ at the poster session\footnote{\url{https://github.com/sevagh/xumx_slicq_extra/blob/main/drafts-and-blobs/mdx21-poster.pdf}} of the MDX 21 challenge.
 
 \end{appendices}
 
